--- a/packages/client/locales/de_DE/citizen.json
+++ b/packages/client/locales/de_DE/citizen.json
@@ -1,101 +1,101 @@
 {
   "Citizen": {
-    "citizen": "Citizen",
-    "citizens": "Citizens",
-    "userNoCitizens": "You don't have any citizens",
-    "createCitizen": "Create Citizen",
-    "viewCitizen": "View Citizen",
-    "editCitizen": "Edit Citizen",
-    "deleteCitizen": "Delete Citizen",
-    "hairColor": "Hair Color",
-    "eyeColor": "Eye Color",
-    "registerVehicle": "Register Vehicle",
-    "registerWeapon": "Register Weapon",
-    "createTowCall": "Create Tow Call",
-    "weight": "Weight",
-    "height": "Height",
+    "citizen": "Bürger",
+    "citizens": "Bürger",
+    "userNoCitizens": "Sie haben keine Bürger",
+    "createCitizen": "Bürger erstellen",
+    "viewCitizen": "Ansicht Bürger",
+    "editCitizen": "Bürger bearbeiten",
+    "deleteCitizen": "Bürger löschen",
+    "hairColor": "Haarfarbe",
+    "eyeColor": "Augenfarbe",
+    "registerVehicle": "Fahrzeug registrieren",
+    "registerWeapon": "Waffe registrieren",
+    "createTowCall": "Abschleppanruf erstellen",
+    "weight": "Gewicht",
+    "height": "Höhe",
     "name": "Name",
-    "surname": "Surname",
-    "fullName": "Full Name",
-    "gender": "Gender",
-    "ethnicity": "Ethnicity",
-    "address": "Address",
-    "dateOfBirth": "Date of Birth",
-    "image": "Image",
-    "age": "Age",
-    "driversLicense": "Drivers License",
-    "driversLicenseCategory": "Drivers License Categories",
-    "weaponLicense": "Firearms License",
-    "phoneNumber": "Phone Number",
-    "pilotLicense": "Pilot License",
-    "pilotLicenseCategory": "Pilot License Categories",
-    "waterLicense": "Water License",
-    "waterLicenseCategory": "Water License Categories",
-    "firearmLicenseCategory": "Firearm License Categories",
-    "ccw": "CCW",
-    "createTaxiCall": "Create Taxi Call",
-    "create911Call": "Create 911 Call",
-    "socialSecurityNumber": "Social Security Number",
-    "occupation": "Occupation",
-    "manageOccupation": "Manage Occupation",
-    "manageLicenses": "Manage Licenses",
-    "licenses": "Licenses",
-    "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
+    "surname": "Nachname",
+    "fullName": "Vollständiger Name",
+    "gender": "Geschlecht",
+    "ethnicity": "Ethnizität",
+    "address": "Adresse",
+    "dateOfBirth": "Geburtsdatum",
+    "image": "Bild",
+    "age": "Alter",
+    "driversLicense": "Führerschein",
+    "driversLicenseCategory": "Führerschein-Kategorien",
+    "weaponLicense": "Feuerwaffenschein",
+    "phoneNumber": "Rufnummer",
+    "pilotLicense": "Pilotenlizenz",
+    "pilotLicenseCategory": "Pilotenlizenz-Kategorien",
+    "waterLicense": "Bootsführerschein",
+    "waterLicenseCategory": "Bootsführerschein-Kategorien",
+    "firearmLicenseCategory": "Feuerwaffenlizenz-Kategorien",
+    "ccw": "VTW",
+    "createTaxiCall": "Taxi-Ruf erstellen",
+    "create911Call": "911 Anruf erstellen",
+    "socialSecurityNumber": "Sozialversicherungsnummer",
+    "occupation": "Beruf",
+    "manageOccupation": "Berufe verwalten",
+    "manageLicenses": "Lizenzen verwalten",
+    "licenses": "Lizenzen",
+    "alert_deleteCitizen": "Sind Sie sicher, dass Sie <span>{citizen}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
   },
   "Vehicles": {
-    "model": "Model",
-    "registrationStatus": "Registration Status",
-    "insuranceStatus": "Insurance Status",
-    "owner": "Owner",
-    "color": "Color",
-    "plate": "Plate",
-    "vinNumber": "VIN Number",
-    "business": "Business",
-    "yourVehicles": "Your Vehicles",
-    "addVehicle": "Add Vehicle",
-    "noVehicles": "You do not have any vehicles registered yet.",
-    "deleteVehicle": "Delete Vehicle",
-    "reportAsStolen": "Report as stolen",
-    "reApplyForDmv": "Re-apply for DMV",
-    "registeredVehicles": "Registered Vehicles",
-    "flags": "Flags",
-    "inspectionStatus": "Inspection Status",
-    "taxStatus": "Tax Status",
-    "taxed": "Taxed",
-    "untaxed": "Untaxed",
-    "passed": "Passed",
-    "failed": "Failed",
-    "inProgress": "In Progress",
-    "vehicleImpounded": "This vehicle is impounded",
-    "successVehicleRegistered": "Successfully registered a vehicle with plate: {plate}",
-    "dmvStatus": "DMV Status",
-    "transfer": "Transfer",
-    "transferVehicle": "Transfer Vehicle",
-    "transferVehicleInfo": "Transfer your <span>{model}</span> to a new owner. This means you will lose ownership of this vehicle and will be unable to manage it further.",
-    "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
+    "model": "Modell",
+    "registrationStatus": "Status der Registrierung",
+    "insuranceStatus": "Versicherungsstatus",
+    "owner": "Eigentümer",
+    "color": "Farbe",
+    "plate": "Nummernschild",
+    "vinNumber": "Fahrzeug-Identifikationsnummer",
+    "business": "Unternehmen",
+    "yourVehicles": "Ihre Fahrzeuge",
+    "addVehicle": "Fahrzeug hinzufügen",
+    "noVehicles": "Sie haben noch keine Fahrzeuge angemeldet.",
+    "deleteVehicle": "Fahrzeug löschen",
+    "reportAsStolen": "Als gestohlen melden",
+    "reApplyForDmv": "Erneut beim DMV beantragen",
+    "registeredVehicles": "Registrierte Fahrzeuge",
+    "flags": "Flaggen",
+    "inspectionStatus": "Status der Inspektion",
+    "taxStatus": "Steuerlicher Status",
+    "taxed": "Versteuert",
+    "untaxed": "Unversteuert",
+    "passed": "Bestanden",
+    "failed": "Gescheitert",
+    "inProgress": "In Arbeit",
+    "vehicleImpounded": "Dieses Fahrzeug ist beschlagnahmt",
+    "successVehicleRegistered": "Erfolgreich ein Fahrzeug mit Nummernschild registriert: {plate}",
+    "dmvStatus": "DMV-Status",
+    "transfer": "Übertragung",
+    "transferVehicle": "Fahrzeug überführen",
+    "transferVehicleInfo": "Übertragen Sie Ihr <span>{model}</span> auf einen neuen Besitzer. Das bedeutet, dass Sie das Eigentum an diesem Fahrzeug verlieren und es nicht weiter verwalten können.",
+    "alert_deleteVehicle": "Sind Sie sicher, dass Sie dieses Fahrzeug löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden."
   },
   "Weapons": {
-    "model": "Model",
-    "registrationStatus": "Registration Status",
-    "serialNumber": "Serial Number",
-    "yourWeapons": "Your Weapons",
-    "addWeapon": "Add Weapon",
-    "noWeapons": "You do not have any weapons registered yet.",
-    "deleteWeapon": "Delete Weapon",
-    "registeredWeapons": "Registered Weapons",
-    "successWeaponRegistered": "Successfully registered a weapon",
-    "alert_deleteWeapon": "Are you sure you want to delete this weapon? This action cannot be undone."
+    "model": "Modell",
+    "registrationStatus": "Status der Registrierung",
+    "serialNumber": "Seriennummer",
+    "yourWeapons": "Ihre Waffe",
+    "addWeapon": "Waffe hinzufügen",
+    "noWeapons": "Sie haben noch keine Waffen registriert.",
+    "deleteWeapon": "Waffe löschen",
+    "registeredWeapons": "Registrierte Waffen",
+    "successWeaponRegistered": "Erfolgreich eine Waffe registriert",
+    "alert_deleteWeapon": "Sind Sie sicher, dass Sie diese Waffe löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
   },
   "MedicalRecords": {
-    "citizen": "Citizen",
-    "yourMedicalRecords": "Your medical records",
-    "addMedicalRecord": "Add Medical Record",
-    "editMedicalRecord": "Edit Medical Record",
-    "noMedicalRecords": "You do not have any medical records yet.",
-    "deleteMedicalRecord": "Delete Medical Record",
-    "bloodGroup": "Blood group",
-    "diseases": "Diseases",
-    "info_bloodgroup": "Note: updating your bloodgroup will update all other medical records' bloodgroup",
-    "alert_deleteMedicalRecord": "Are you sure you want to delete this medical record? This action cannot be undone."
+    "citizen": "Bürger",
+    "yourMedicalRecords": "Ihre Krankenakten",
+    "addMedicalRecord": "Krankenakte hinzufügen",
+    "editMedicalRecord": "Krankenakte bearbeiten",
+    "noMedicalRecords": "Sie haben noch keine Krankenakten.",
+    "deleteMedicalRecord": "Krankenakte löschen",
+    "bloodGroup": "Blutgruppe",
+    "diseases": "Krankheiten",
+    "info_bloodgroup": "Hinweis: Wenn Sie Ihre Blutgruppe aktualisieren, wird auch die Blutgruppe aller anderen Krankenakten aktualisiert.",
+    "alert_deleteMedicalRecord": "Sind Sie sicher, dass Sie diese Krankenakte löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
