--- a/packages/client/locales/de_DE/courthouse.json
+++ b/packages/client/locales/de_DE/courthouse.json
@@ -1,37 +1,37 @@
 {
   "Courthouse": {
-    "courthouse": "San Andreas Court",
-    "requestExpungement": "Request Expungement",
-    "noExpungementRequests": "You do not have any expungement requests",
-    "request": "Request",
-    "noPendingRequests": "There are no pending expungement requests",
-    "expungementRequests": "Expungement requests",
-    "nameChangeRequests": "Name change requests",
-    "requestNameChange": "Request name change",
-    "noNameChangeRequests": "There are no name change requests.",
-    "newName": "New Name",
-    "newSurname": "New surname",
+    "courthouse": "San Andreas Gericht",
+    "requestExpungement": "Antrag auf Löschung",
+    "noExpungementRequests": "Sie haben keine Anträge auf Löschung",
+    "request": "Anfrage",
+    "noPendingRequests": "Es sind keine Anträge auf Löschung anhängig",
+    "expungementRequests": "Anträge auf Löschung",
+    "nameChangeRequests": "Anträge auf Namensänderung",
+    "requestNameChange": "Antrag auf Namensänderung",
+    "noNameChangeRequests": "Es liegen keine Anträge auf Namensänderung vor.",
+    "newName": "Neuer Name",
+    "newSurname": "Neuer Nachname",
     "status": "Status",
-    "courtEntries": "Court Entries",
-    "noCourtEntries": "There are no court entries.",
-    "addCourtEntry": "Add court entry",
-    "deleteCourtEntry": "Delete court entry",
-    "manageCourtEntry": "Manage court entry",
-    "caseNumber": "Case Number",
-    "title": "Title",
-    "dates": "Dates",
-    "addDate": "Add Date",
-    "manageCourtDate": "Manage court date",
-    "date": "Date",
-    "note": "Note",
-    "deleteCourtDate": "Delete court date",
-    "courthousePosts": "Courthouse posts",
-    "manageCourthousePost": "Manage courthouse post",
-    "deleteCourthousePost": "Delete courthouse post",
-    "addCourthousePost": "Add courthouse post",
-    "noCourthousePosts": "There are no courthouse posts yet.",
-    "alert_deleteCourthousePost": "Are you sure you want to delete this post? This action cannot be undone.",
-    "alert_deleteCourtEntry": "Are you sure you want to delete this entry? This action cannot be undone.",
-    "alert_deleteCourtDate": "Are you sure you want to delete this court date? This action cannot be undone."
+    "courtEntries": "Einträge am Hof",
+    "noCourtEntries": "Es gibt keine Gerichtseinträge.",
+    "addCourtEntry": "Gerichtseintrag hinzufügen",
+    "deleteCourtEntry": "Gerichtseintrag löschen",
+    "manageCourtEntry": "Gerichtseintrag verwalten",
+    "caseNumber": "Fallnummer",
+    "title": "Titel",
+    "dates": "Daten",
+    "addDate": "Datum hinzufügen",
+    "manageCourtDate": "Gerichtstermin verwalten",
+    "date": "Datum",
+    "note": "Notiz",
+    "deleteCourtDate": "Gerichtstermin löschen",
+    "courthousePosts": "Gerichtsposten",
+    "manageCourthousePost": "Verwaltung der Gerichtspost",
+    "deleteCourthousePost": "Gerichtsposten löschen",
+    "addCourthousePost": "Gerichtsposten hinzufügen",
+    "noCourthousePosts": "Es gibt noch keine Gerichtsposten.",
+    "alert_deleteCourthousePost": "Sind Sie sicher, dass Sie diesen Beitrag löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_deleteCourtEntry": "Sind Sie sicher, dass Sie diesen Eintrag löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_deleteCourtDate": "Sind Sie sicher, dass Sie diesen Gerichtstermin löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
