--- a/packages/client/locales/de_DE/common.json
+++ b/packages/client/locales/de_DE/common.json
@@ -1,155 +1,155 @@
 {
   "Common": {
-    "delete": "Delete",
-    "edit": "Edit",
-    "save": "Save",
-    "cancel": "Cancel",
-    "actions": "Actions",
-    "type": "Type",
-    "description": "Description",
-    "manage": "Manage",
-    "on": "On",
-    "off": "Off",
-    "enabled": "Enabled",
-    "disabled": "Disabled",
-    "error": "An unexpected error occurred",
-    "view": "View",
-    "create": "Create",
-    "reason": "Reason",
-    "none": "None",
-    "insufficientPermissions": "Insufficient Permissions",
-    "noOptions": "No Options",
-    "accept": "Accept",
-    "decline": "Decline",
-    "createdAt": "Created At",
-    "updatedAt": "Updated At",
-    "reset": "Reset",
-    "search": "Search",
-    "events": "Events",
+    "delete": "Löschen",
+    "edit": "Bearbeiten",
+    "save": "Speichern",
+    "cancel": "Abbrechen",
+    "actions": "Aktionen",
+    "type": "Typ",
+    "description": "Beschreibung",
+    "manage": "Verwalten",
+    "on": "An",
+    "off": "Aus",
+    "enabled": "Aktiviert",
+    "disabled": "Deaktiviert",
+    "error": "Ein unerwarteter Fehler ist aufgetreten",
+    "view": "Anzeigen",
+    "create": "Erstellen",
+    "reason": "Grund",
+    "none": "Keine",
+    "insufficientPermissions": "Unzureichende Berechtigungen",
+    "noOptions": "Keine Optionen",
+    "accept": "Akzeptieren",
+    "decline": "Ablehnen",
+    "createdAt": "Erstellt am",
+    "updatedAt": "Aktualisiert am",
+    "reset": "Zurücksetzen",
+    "search": "Suchen",
+    "events": "Ereignisse",
     "name": "Name",
-    "categories": "Categories",
-    "continue": "Continue",
-    "yes": "Yes",
-    "no": "No",
-    "stopRoleplay": "Stop Roleplay",
-    "roleplayStopped": "Admins issued all players to stop all roleplay.",
+    "categories": "Kategorien",
+    "continue": "Weiter",
+    "yes": "Ja",
+    "no": "Nein",
+    "stopRoleplay": "RolePlay beenden",
+    "roleplayStopped": "Die Admins haben alle Spieler angewiesen, jegliches Rollenspiel einzustellen.",
     "optionalField": "Optional",
-    "title": "Title",
-    "image": "Image",
+    "title": "Titel",
+    "image": "Bild",
     "imgur": "Imgur URL",
-    "postal": "Postal",
-    "viewDescription": "View description",
-    "citizen": "Citizen",
-    "cropImage": "Crop Image",
-    "crop": "Crop",
-    "hide": "Hide",
-    "show": "Show",
-    "filters": "Filters",
-    "openInSearch": "Open in search",
-    "goBack": "Go back",
-    "success": "Success",
+    "postal": "Postleitzahl",
+    "viewDescription": "Beschreibung anzeigen",
+    "citizen": "Bürger",
+    "cropImage": "Bild zuschneiden",
+    "crop": "Zuschneiden",
+    "hide": "Verbergen",
+    "show": "Anzeigen",
+    "filters": "Filter",
+    "openInSearch": "In Suche öffnen",
+    "goBack": "Zurück",
+    "success": "Erfolgreich",
     "currency": "$",
-    "left": "Left",
-    "right": "Right",
-    "user": "User",
-    "savedSettingsSuccess": "Settings successfully saved."
+    "left": "Übrig",
+    "right": "Rechts",
+    "user": "Benutzer",
+    "savedSettingsSuccess": "Einstellungen erfolgreich gespeichert"
   },
   "Nav": {
-    "citizen": "Citizen",
-    "citizens": "Citizens",
+    "citizen": "Bürger",
+    "citizens": "Bürger",
     "bleeter": "Bleeter",
     "taxi": "Taxi",
-    "business": "Business",
-    "truckLogs": "Truck Logs",
+    "business": "Unternehmen",
+    "truckLogs": "Lkv-Logbuch",
     "admin": "Admin",
     "dispatch": "Dispatch",
-    "liveMap": "Live Map",
-    "officer": "Officer",
+    "liveMap": "Live-Karte",
+    "officer": "Offizier",
     "dashboard": "Dashboard",
-    "myOfficers": "My Officers",
-    "myOfficerLogs": "My Officer Logs",
-    "incidents": "Incidents",
-    "impoundLot": "Impound Lot",
-    "manageUnits": "Manage Units",
-    "jail": "Jail",
-    "tow": "Tow",
-    "towLogs": "Tow Logs",
+    "myOfficers": "Meine Offiziere",
+    "myOfficerLogs": "Mein Offizier-Logbuch",
+    "incidents": "Vorfälle",
+    "impoundLot": "Beschlagnahmungsstelle",
+    "manageUnits": "Einheiten verwalten",
+    "jail": "Gefängnis",
+    "tow": "Hilfskraft",
+    "towLogs": "Hilfskraft-Logbuch",
     "emsFd": "EMS/FD",
-    "myDeputies": "My Deputies",
-    "account": "Account",
-    "logout": "Logout",
-    "login": "Login",
-    "register": "Register",
-    "callHistory": "Call History",
-    "citizenLogs": "Citizen Logs",
-    "courthouse": "Courthouse",
-    "dlExams": "Driver License Exams",
+    "myDeputies": "Meine Abteilungsleiter",
+    "account": "Konto",
+    "logout": "Abmelden",
+    "login": "Anmelden",
+    "register": "Registrieren",
+    "callHistory": "Anruf-Verlauf",
+    "citizenLogs": "Bürger-Logbuch",
+    "courthouse": "Gericht",
+    "dlExams": "FS-Prüfungen",
     "dmv": "Department of Motor Vehicles",
-    "penalCodes": "Penal Codes",
-    "weaponExams": "Weapon Exams",
-    "myDeputyLogs": "My deputy logs"
+    "penalCodes": "Verbotliche Codes",
+    "weaponExams": "Waffen-Prüfungen",
+    "myDeputyLogs": "Mein Abteilungsleiter-Logbuch"
   },
   "Errors": {
-    "unknown": "An unexpected error occurred",
-    "userNotFound": "That user was not found.",
-    "nameAlreadyTaken": "A citizen with that full name is already in use.",
-    "whitelistPending": "This account is still pending access to the CAD.",
-    "whitelistDeclined": "This account was declined access to the CAD.",
-    "passwordIncorrect": "The password you entered was not correct.",
-    "userAlreadyExists": "A user with that username already exists.",
-    "notFound": "The requested item was not found.",
-    "plateAlreadyInUse": "That plate is already being used on a vehicle.",
-    "invalidImageType": "Only types image/png, image/jpeg, image/jpg and image/gif are supported",
-    "userBanned": "This account is banned from this CAD.",
-    "userDeleted": "This account has been deleted from this CAD.",
-    "alreadyInThisBusiness": "You are already an employee at this business.",
-    "insufficientPermissions": "Insufficient Permissions",
-    "maxBusinessesLength": "You have reached the maximum limit of businesses per citizen.",
-    "dateLargerThanNow": "Please provide a date smaller than the current date.",
-    "divisionNotInDepartment": "This division does not exist in this department.",
-    "passwordsDoNotMatch": "Passwords do not match",
-    "currentPasswordIncorrect": "Current password is incorrect",
-    "citizenNotFound": "That citizen was not found",
-    "selectImageFirst": "You must first select an image.",
-    "officerIsCombined": "This officer is marked as combined unit and cannot be used individually right now.",
-    "officerAlreadyMerged": "This unit is already marked as a combined unit.",
-    "discordNameInUse": "Could not create a new account with Discord since the username is already in-use.",
-    "discordAccountAlreadyLinked": "This Discord account is already linked to another account.",
-    "cannotRegisterFirstWithDiscord": "The first account must be registered without Discord. You can link Discord once the account is created.",
-    "invalidRegistrationCode": "The registration code you provided is invalid.",
-    "unitSuspended": "This unit is suspended. Please contact your supervisor.",
-    "recordOrWarrantAlreadyLinked": "A record or a warrant has already been requested. Please remove the already requested record/warrant.",
-    "businessIsPending": "This business is still awaiting approval to be used. Try again later",
-    "businessCreatedButPending": "The business has been created successfully but is still awaiting approval to be used. It must be approved by an administrator.",
-    "maxDivisionsReached": "This officer reached the maximum limit of divisions per officer.",
-    "maxLimitOfficersPerUserReached": "This user reached the maximum limit of officers.",
-    "maxCitizensPerUserReached": "This user reached the maximum limit of citizens.",
-    "discordIdInUse": "This discord ID is already connected to a different account.",
-    "totpCodeRequired": "Please enter your 2FA code",
-    "Error": "An unexpected error occurred. Please report this issue to an administrator or try again later.",
-    "NOT_FOUND": "The requested item or page was not found. Please try refreshing the page or try again later.",
-    "Network Error": "Could not reach the API due to a network error. Make sure that the API is online and that you are connected to the internet.",
-    "mustSetBotTokenGuildId": "This feature cannot be used because there was no `BOT_TOKEN` or `GUILD_ID` present. Please read how to enable Discord Roles: https://cad-docs.caspertheghost.me/docs/discord-integration/discord-roles",
-    "maxDepartmentsReachedPerUser": "You've reached the max set of units with this department. Please choose a different department or try again later.",
-    "allowRegularLoginIsDisabled": "Regular login is disabled. Please use Discord OAuth instead",
-    "Invalid Permissions": "You don't have permissions to access this API Route.",
-    "alreadyPendingNameChange": "This citizen already has a pending name change request.",
-    "nameChangeRequestNotNew": "To create a name change request, the new name cannot match the previous name.",
-    "socketError": "Socket connection error",
-    "socketErrorInfo": "Connection to the API has been disconnected. Please re-connect to the internet or reload the browser window.",
-    "fine_invalidDataReceived": "Invalid fines data received. Min: {min}, max: {max}",
-    "jailTime_invalidDataReceived": "Invalid jail time data received. Min: {min}, max: {max}",
-    "bail_invalidDataReceived": "Invalid bail data received. Min: {min}, max: {max}",
-    "forbidden": "Forbidden",
-    "pageNotFound": "Page Not Found",
-    "unitCallsignInUse": "This full callsign is already in-use by another unit. Please specify another callsign.",
-    "steamNameInUse": "Could not create a new account with Steam since the username is already in-use.",
-    "steamAccountAlreadyLinked": "This Steam account is already linked to another account.",
-    "cannotRegisterFirstWithSteam": "The first account must be registered without Steam. You can link Steam once the account is created.",
-    "Unauthorized": "You have been logged out. Please log back in to continue.",
-    "captchaRequired": "An error occurred trying to validate your CAPTCHA. Please try again later.",
-    "invalidCaptcha": "We were unable to verify you are a human. Please contact an administrator if you think this is an error.",
-    "updateAvailable": "Update Available",
-    "updateAvailableInfo": "A new update is available. Please update your SnailyCAD to take advantage of the latest features and bug fixes. Click for more information."
+    "unknown": "Ein unerwarteter Fehler ist aufgetreten",
+    "userNotFound": "Benutzer nicht gefunden",
+    "nameAlreadyTaken": "Dieser Name ist bereits vergeben",
+    "whitelistPending": "Für dieses Konto steht der Zugang zum CAD noch aus.",
+    "whitelistDeclined": "Der Zugang zum CAD wurde abgelehnt.",
+    "passwordIncorrect": "Das Passwort ist falsch",
+    "userAlreadyExists": "Dieser Benutzer existiert bereits",
+    "notFound": "Der angeforderte Artikel wurde nicht gefunden.",
+    "plateAlreadyInUse": "Diese Nummernschild ist bereits in Benutzung.",
+    "invalidImageType": "Es werden nur die Typen image/png, image/jpeg, image/jpg und image/gif unterstützt",
+    "userBanned": "Dieser Benutzer ist gesperrt",
+    "userDeleted": "Dieser Benutzer wurde gelöscht",
+    "alreadyInThisBusiness": "Dieser Bürger ist bereits in diesem Unternehmen",
+    "insufficientPermissions": "Du hast nicht die benötigten Berechtigungen, um dies zu tun.",
+    "maxBusinessesLength": "Sie haben die maximale Anzahl von Unternehmen pro Bürger erreicht.",
+    "dateLargerThanNow": "Diese Datum ist in der Zukunft.",
+    "divisionNotInDepartment": "Diese Division gehört nicht zu diesem Abteilungsleiter.",
+    "passwordsDoNotMatch": "Die Passwörter stimmen nicht überein.",
+    "currentPasswordIncorrect": "Das aktuelle Passwort ist falsch.",
+    "citizenNotFound": "Bürger nicht gefunden",
+    "selectImageFirst": "Bitte wähle zuerst ein Bild aus.",
+    "officerIsCombined": "Dieser Beamte ist als kombinierte Einheit gekennzeichnet und kann im Moment nicht einzeln eingesetzt werden.",
+    "officerAlreadyMerged": "Diese Einheit ist bereits als kombinierte Einheit gekennzeichnet.",
+    "discordNameInUse": "Dieser Discord-Name ist bereits in Benutzung.",
+    "discordAccountAlreadyLinked": "Dieser Discord-Account ist bereits mit einem anderen Benutzer verknüpft.",
+    "cannotRegisterFirstWithDiscord": "Du kannst nicht mit Discord registrieren, wenn du noch keinen Benutzer hast.",
+    "invalidRegistrationCode": "Der Registrierungscode ist ungültig.",
+    "unitSuspended": "Diese Einheit ist gesperrt.",
+    "recordOrWarrantAlreadyLinked": "Dieser Aufenthalt ist bereits mit einem anderen Benutzer verknüpft.",
+    "businessIsPending": "Dieses Unternehmen ist noch nicht aktiviert.",
+    "businessCreatedButPending": "Dieses Unternehmen wurde erstellt, aber noch nicht aktiviert.",
+    "maxDivisionsReached": "Sie haben die maximale Anzahl von Divisionen pro Abteilungsleiter erreicht.",
+    "maxLimitOfficersPerUserReached": "Sie haben die maximale Anzahl von Beamten pro Benutzer erreicht.",
+    "maxCitizensPerUserReached": "Sie haben die maximale Anzahl von Bürger pro Benutzer erreicht.",
+    "discordIdInUse": "Dieser Discord-ID ist bereits in Benutzung.",
+    "totpCodeRequired": "Ein TOTP-Code ist erforderlich.",
+    "Error": "Ein unerwarteter Fehler ist aufgetreten. Melden Sie dieses Problem einem Administrator.",
+    "NOT_FOUND": "Das angeforderte Element oder die Seite wurde nicht gefunden. Bitte versuchen Sie, die Seite zu aktualisieren oder versuchen Sie es später noch einmal.",
+    "Network Error": "Aufgrund eines Netzwerkfehlers konnte die API nicht erreicht werden. Stellen Sie sicher, dass die API online ist und dass Sie mit dem Internet verbunden sind.",
+    "mustSetBotTokenGuildId": "Diese Funktion kann nicht verwendet werden, da kein `BOT_TOKEN` oder `GUILD_ID` vorhanden war. Bitte lesen Sie, wie Sie Discord-Rollen aktivieren: https://cad-docs.caspertheghost.me/docs/discord-integration/discord-roles",
+    "maxDepartmentsReachedPerUser": "Sie haben die maximale Anzahl von Abteilungen pro Benutzer erreicht.",
+    "allowRegularLoginIsDisabled": "Die Funktion `allowRegularLogin` ist deaktiviert. Bitte loggen Sie sich stattdessen über Discord ein.",
+    "Invalid Permissions": "Sie haben keine Berechtigung für den Zugriff auf diese API-Route.",
+    "alreadyPendingNameChange": "Dieser Benutzer hat bereits einen Namen-Änderungsantrag.",
+    "nameChangeRequestNotNew": "Um einen Antrag auf Namensänderung zu stellen, darf der neue Name nicht mit dem vorherigen Namen übereinstimmen.",
+    "socketError": "Es ist ein Socket-Fehler aufgetreten. Bitte versuchen Sie es später noch einmal.",
+    "socketErrorInfo": "Die Verbindung zur API wurde unterbrochen. Bitte verbinden Sie sich erneut mit dem Internet oder laden Sie das Browserfenster neu.",
+    "fine_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
+    "jailTime_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
+    "bail_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
+    "forbidden": "Verbotene",
+    "pageNotFound": "Seite nicht gefunden",
+    "unitCallsignInUse": "Dieser Rufzeichen ist bereits in Benutzung.",
+    "steamNameInUse": "Dieser Steam-Name ist bereits in Benutzung.",
+    "steamAccountAlreadyLinked": "Dieser Steam-Account ist bereits mit einem anderen Benutzer verknüpft.",
+    "cannotRegisterFirstWithSteam": "Du kannst nicht mit Steam registrieren, wenn du noch keinen Benutzer hast.",
+    "Unauthorized": "Sie wurden abgemeldet. Bitte loggen Sie sich wieder ein, um fortzufahren.",
+    "captchaRequired": "Bitte bestätigen Sie, dass Sie kein Roboter sind.",
+    "invalidCaptcha": "Wir konnten nicht überprüfen, ob Sie ein Mensch sind. Bitte kontaktieren Sie einen Administrator, wenn Sie glauben, dass dies ein Fehler ist.",
+    "updateAvailable": "Eine neue Version von CAD ist verfügbar.",
+    "updateAvailableInfo": "Eine neue Version von CAD ist verfügbar. Bitte laden Sie sich die neue Version herunter: https://github.com/SnailyCAD/snaily-cadv4"
   }
 }
