:adhesive_bandage: Updated wrong translations

--- a/packages/client/locales/de_DE/admin.json
+++ b/packages/client/locales/de_DE/admin.json
@@ -52,7 +52,7 @@
     "noCustomFields": "Es sind noch keine benutzerdefinierten Felder vorhanden",
     "deleteCustomField": "Benutzerdefiniertes Feld löschen",
     "deleteUnit": "Einheit löschen",
-    "callsignManagement": "Rufzeichen-Management",
+    "callsignManagement": "Rufzeichen-Verwaltung",
     "customRoles": "Benutzerdefinierte Rollen",
     "createCustomRole": "Benutzerdefinierte Rolle erstellen",
     "noCustomRoles": "Es gibt noch keine benutzerdefinierten Rollen.",
