--- a/packages/client/locales/de_DE/business.json
+++ b/packages/client/locales/de_DE/business.json
@@ -29,7 +29,7 @@
     "whitelistStatus": "Whitelist-Status",
     "allEmployees": "Alle Mitarbeiter",
     "pendingEmployees": "Anhängige Mitarbeiter",
-    "businessVehicles": "Business-Fahrzeuge",
+    "businessVehicles": "Unternehmen-Fahrzeuge",
     "noPendingEmployees": "Es gibt keine Mitarbeiter, die auf Zugang warten.",
     "noVehicles": "Dieses Unternehmen hat keine Fahrzeuge zugelassen.",
     "businessIsWhitelisted": "Dieses Unternehmen ist auf der Whitelist. Sie können es sehen, sobald Sie akzeptiert wurden.",
