:globe_with_meridians: Add 'Additional Info' in FRA and DEU

--- a/packages/client/locales/de_DE/citizen.json
+++ b/packages/client/locales/de_DE/citizen.json
@@ -37,6 +37,7 @@
     "create911Call": "911 Anruf erstellen",
     "socialSecurityNumber": "Sozialversicherungsnummer",
     "occupation": "Beruf",
+    "additionalInfo": "Zusatsinfo",
     "manageOccupation": "Berufe verwalten",
     "manageLicenses": "Lizenzen verwalten",
     "licenses": "Lizenzen",
