--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -150,6 +150,8 @@
     "captchaRequired": "An error occurred trying to validate your CAPTCHA. Please try again later.",
     "invalidCaptcha": "We were unable to verify you are a human. Please contact an administrator if you think this is an error.",
     "updateAvailable": "Update Available",
-    "updateAvailableInfo": "A new update is available. Please update your SnailyCAD to take advantage of the latest features and bug fixes. Click for more information."
+    "updateAvailableInfo": "A new update is available. Please update your SnailyCAD to take advantage of the latest features and bug fixes. Click for more information.",
+    "serialNumberInUse": "Serial Number is already in use.",
+    "vinNumberInUse": "VIN Number is already in use."
   }
 }
