--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -148,6 +148,10 @@
     "cannotRegisterFirstWithSteam": "Первый аккаунт должен быть зарегистрирован без Steam. Вы можете подключить Steam после создания аккаунта.",
     "Unauthorized": "Вы были отключены. Войдите, чтобы продолжить.",
     "captchaRequired": "Произошла ошибка при попытке подтвердить CAPTCHA. Попробуйте позже",
-    "invalidCaptcha": "Нам не удалось подтвердить, что вы человек. Свяжитесь с администратором, если считаете, что это ошибка"
+    "invalidCaptcha": "Нам не удалось подтвердить, что вы человек. Свяжитесь с администратором, если считаете, что это ошибка",
+    "updateAvailable": "Добступно обновление",
+    "updateAvailableInfo": "Доступно обновление. Обновите ваш SnailyCAD, чтобы получить свежие функции и обновления. Кликните для информации.",
+    "serialNumberInUse": "Серийный номер уже используется",
+    "vinNumberInUse": "VIN номер уже используется"
   }
 }
