--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -254,7 +254,8 @@
     "person": "Человек",
     "vehicle": "Транспорт",
     "other": "Прочее",
-    "stolen": "В угоне",
+    "stolen": "украден(о)",
+    "filters": "Фильтры",
     "alert_deleteBolo": "Вы уверены, что хотите удалить эту запись BOLO? Это действие необратимо"
   }
 }
