--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -48,6 +48,7 @@
     "callCountyService": "Call County Service",
     "dropToUnassign": "Drop to unassign from call",
     "type": "Call Type",
+    "description": "Description",
     "alert_purgeSelectedCalls": "Are you sure you want to purge {length} item(s)? This will delete {length} item(s) from the database. This action cannot be undone.",
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
