💬 Update 'ru' locale

--- a/packages/client/locales/ru/calls.json
+++ b/packages/client/locales/ru/calls.json
@@ -48,6 +48,7 @@
     "callCountyService": "Вызов службы округа",
     "dropToUnassign": "Перетащите, чтобы открепить от вызова",
     "type": "Тип вызова",
+    "description": "Описание",
     "alert_purgeSelectedCalls": "Вы уверены, что хотите удалить {length} элемент(ов)? Это действие необратимо.",
     "alert_deleteCallEvent": "Вы уверены, что хотите удалить событие? Это дейтвие необратимо.",
     "alert_end911Call": "Вы уверены, что хотите завершить вызов?",
