:tada: feat: improvements to headers (edit pages)

--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -60,6 +60,9 @@
     "editCustomRole": "Edit custom role",
     "manageRoles": "Manage Roles",
     "roles": "Roles",
+    "editUser": "Edit User",
+    "editing": "You are currently editing <span>{user}</span>",
+    "editUnit": "Edit Unit",
     "alert_deleteCustomRole": "Are you sure you want to delete <span>{role}</span>? This action cannot be undone",
     "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
