:globe_with_meridians: Latest FRA and DEU translation

--- a/packages/client/locales/de-DE/admin.json
+++ b/packages/client/locales/de-DE/admin.json
@@ -60,6 +60,9 @@
     "editCustomRole": "Benutzerdefinierte Rolle bearbeiten",
     "manageRoles": "Rollen verwalten",
     "roles": "Rollen",
+    "editUser": "Benutzer bearbeiten",
+    "editing": "Sie bearbeiten gerade <span>{user}</span>",
+    "editUnit": "Einheit bearbeiten",
     "alert_deleteCustomRole": "Sind Sie sicher, dass Sie <span>{role}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
     "alert_deleteUnit": "Sind Sie sicher, dass Sie <span>{unit}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
     "alert_deleteCustomField": "Sind Sie sicher, dass Sie dieses benutzerdefinierte Feld löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden. Alle Werte, die mit diesem Feld erstellt wurden, werden ebenfalls gelöscht.",
