--- a/packages/client/locales/fr-FR/admin.json
+++ b/packages/client/locales/fr-FR/admin.json
@@ -60,6 +60,9 @@
     "editCustomRole": "Modifier le rôle personnalisé",
     "manageRoles": "Gérer les rôles personnalisés",
     "roles": "Rôles",
+    "editUser": "Modifier l'utilisateur",
+    "editing": "Vous êtes en train de modifier <span>{user}</span>",
+    "editUnit": "Modifier l'unité",
     "alert_deleteCustomRole": "Êtes-vous sûr de vouloir supprimer <span>{role}</span> ? Cette action ne peut pas être annulée",
     "alert_deleteUnit": "Êtes-vous sûr de vouloir supprimer <span>{unit}</span> ? Cette action ne peut pas être annulée !",
     "alert_deleteCustomField": "Êtes-vous sûr de vouloir supprimer ce champ personnalisé ? Cette action ne peut pas être annulée. Toutes les valeurs créées avec ce champ seront également supprimées.",
