💬 Update 'ru' locale

--- a/packages/client/locales/ru/admin.json
+++ b/packages/client/locales/ru/admin.json
@@ -60,6 +60,9 @@
     "editCustomRole": "Редактировать пользовательскую роль",
     "manageRoles": "Управление ролями",
     "roles": "Роли",
+    "editUser": "Редактировать пользователя",
+    "editing": "Вы редактируете <span>{user}</span>",
+    "editUnit": "Редоктировать юнит",
     "alert_deleteCustomRole": "Вы уверены, что хотите удалить <span>{role}</span>? Это действие необратимо",
     "alert_deleteUnit": "Вы уверены, что хотите удалить <span>{unit}</span>? Это действие необратимо!",
     "alert_deleteCustomField": "Вы уверены, что хотите удалить это пользовательско поле? Это действие необратимо. Все записи, созданные с этим полем будут удалены.",
