--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -231,6 +231,8 @@
     "deleteWeaponExam": "Удалить экзамен на оружейную лицензию",
     "activeWarrants": "Активные ордеры",
     "noActiveWarrants": "Нет активных ордеров",
+    "paymentStatus": "Статус оплаты",
+    "recordPaid": "Запись оплачена?",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо",
