--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -233,6 +233,10 @@
     "noActiveWarrants": "There are no active warrants.",
     "paymentStatus": "Payment Status",
     "recordPaid": "Record Paid?",
+    "showCalls": "Show calls",
+    "hideCalls": "Hide calls",
+    "showUnitsOnly": "Show units only",
+    "showAllPlayers": "show all players",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
