💬 Update 'ru' locale

--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -233,6 +233,10 @@
     "noActiveWarrants": "Нет активных ордеров",
     "paymentStatus": "Статус оплаты",
     "recordPaid": "Запись оплачена?",
+    "showCalls": "Показать вызовы",
+    "hideCalls": "Скрыть вызовы",
+    "showUnitsOnly": "Показать только юниты",
+    "showAllPlayers": "Показать всех игроков",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо",
