--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -53,6 +53,9 @@
     "call": "Call",
     "primaryUnit": "Primary Unit",
     "priority": "Priority",
+    "addUnit": "Add unit",
+    "unit": "Unit",
+    "unassign": "Unassign",
     "alert_purgeSelectedCalls": "Are you sure you want to purge {length} item(s)? This will delete {length} item(s) from the database. This action cannot be undone.",
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
