:globe_with_meridians: Updated FRA and DEU

--- a/packages/client/locales/de-DE/calls.json
+++ b/packages/client/locales/de-DE/calls.json
@@ -48,6 +48,14 @@
     "callCountyService": "Grafschaftsdienst anrufen",
     "dropToUnassign": "Verwerfen, um die Zuordnung zum Anruf aufzuheben",
     "type": "Art der Aufforderung",
+    "description": "Beschreibung",
+    "lastUpdatedAt": "Zuletzt aktualisiert",
+    "call": "Anruf",
+    "primaryUnit": "Primäre Einheit",
+    "priority": "Priorität",
+    "addUnit": "Einheit hinzufügen",
+    "unit": "Einheit",
+    "unassign": "Zuordnung aufheben",
     "alert_purgeSelectedCalls": "Sind Sie sicher, dass Sie {length} Elemente bereinigen wollen? Dies löscht {length} Elemente aus der Datenbank. Diese Aktion kann nicht rückgängig gemacht werden.",
     "alert_deleteCallEvent": "Sind Sie sicher, dass Sie dieses Ereignis löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
     "alert_end911Call": "Sind Sie sicher, dass Sie diesen Anruf beenden möchten?",
