--- a/packages/client/locales/de-DE/leo.json
+++ b/packages/client/locales/de-DE/leo.json
@@ -231,6 +231,12 @@
     "deleteWeaponExam": "Waffenprüfung löschen",
     "activeWarrants": "Aktive Haftbefehle",
     "noActiveWarrants": "Es gibt keine aktiven Haftbefehle.",
+    "paymentStatus": "Zahlungsstatus",
+    "recordPaid": "Bezahlt?",
+    "showCalls": "Anrufe anzeigen",
+    "hideCalls": "Anrufe ausblenden",
+    "showUnitsOnly": "Nur Einheiten anzeigen",
+    "showAllPlayers": "Alle Spieler anzeigen",
     "alert_deleteNote": "Sind Sie sicher, dass Sie diese Notiz löschen möchten?",
     "alert_deleteQualification": "Sind Sie sicher, dass Sie diese Qualifikation löschen möchten?",
     "alert_deleteDLExam": "Sind Sie sicher, dass Sie diese Fahrzeug Prüfung löschen möchten?",
