--- a/packages/client/locales/fr-FR/leo.json
+++ b/packages/client/locales/fr-FR/leo.json
@@ -231,6 +231,12 @@
     "deleteWeaponExam": "Supprimer Examen PPA",
     "activeWarrants": "Mandats actifs",
     "noActiveWarrants": "Il n'y a pas de mandat actif",
+    "paymentStatus": "Statut du paiement",
+    "recordPaid": "Payé ?",
+    "showCalls": "Afficher les appels",
+    "hideCalls": "Cacher les appels",
+    "showUnitsOnly": "Afficher les unités seulement",
+    "showAllPlayers": "Afficher tous les joueurs",
     "alert_deleteNote": "Êtes-vous sûr de vouloir supprimer cette note ? Cette action ne peut être annulée.",
     "alert_deleteQualification": "Êtes-vous sur de vouloir supprimer cette qualification ? Cette action ne peut être annulée.",
     "alert_deleteDLExam": "Êtes-vous sûr de vouloir supprimer cet examen du permis de conduire ? Cette action ne peut être annulée.",
