--- a/packages/client/locales/fr-FR/calls.json
+++ b/packages/client/locales/fr-FR/calls.json
@@ -48,6 +48,14 @@
     "callCountyService": "Appeler le service départemental",
     "dropToUnassign": "Abandon de l'appel",
     "type": "Type de l'appel",
+    "description": "Description",
+    "lastUpdatedAt": "Dernière MàJ à",
+    "call": "Appel",
+    "primaryUnit": "Unité primaire",
+    "priority": "Priorité",
+    "addUnit": "Ajouter Unité",
+    "unit": "Unité",
+    "unassign": "Désassigner",
     "alert_purgeSelectedCalls": "Êtes-vous sûr de vous vouloir purger {length} élément(s) ? Cela supprimera {length} élément(s) de la base de données. Cette action ne peut être annulée.",
     "alert_deleteCallEvent": "Êtes-vous sûr de vouloir supprimer cet événement ? Cette action ne peut être annulée.",
     "alert_end911Call": "Êtes-vous sûr de vouloir terminer cet appel ?",
