💬 Update 'ru' locale

--- a/packages/client/locales/ru/calls.json
+++ b/packages/client/locales/ru/calls.json
@@ -49,6 +49,13 @@
     "dropToUnassign": "Перетащите, чтобы открепить от вызова",
     "type": "Тип вызова",
     "description": "Описание",
+    "lastUpdatedAt": "Обновлено в",
+    "call": "Вызов",
+    "primaryUnit": "Основной юнит",
+    "priority": "Приоритет",
+    "addUnit": "Добавить юнит",
+    "unit": "Юнит",
+    "unassign": "Открепить",
     "alert_purgeSelectedCalls": "Вы уверены, что хотите удалить {length} элемент(ов)? Это действие необратимо.",
     "alert_deleteCallEvent": "Вы уверены, что хотите удалить событие? Это дейтвие необратимо.",
     "alert_end911Call": "Вы уверены, что хотите завершить вызов?",
