:hammer: chore: update translations (en_gb)

--- a/packages/client/locales/en-gb/citizen.json
+++ b/packages/client/locales/en-gb/citizen.json
@@ -6,6 +6,7 @@
     "createCitizen": "Create Civilian",
     "viewCitizen": "View Civilian",
     "editCitizen": "Edit Civilian",
+    "editingCitizen": "You are currently editing <span>{citizen}</span>.",
     "deleteCitizen": "Delete Civilian",
     "hairColor": "Hair Color",
     "eyeColor": "Eye Color",
@@ -37,6 +38,7 @@
     "create911Call": "Create 999 Call",
     "socialSecurityNumber": "National Insurance Number",
     "occupation": "Occupation",
+    "additionalInfo": "Additional Info",
     "manageOccupation": "Manage Occupation",
     "manageLicenses": "Manage Licenses",
     "licenses": "Licenses",
