--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -12,6 +12,7 @@
     "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
     "MANAGE_CUSTOM_ROLES": "Manage Custom Roles",
     "MANAGE_COURTHOUSE": "Manage Courthouse",
+    "MANAGE_PENDING_WARRANTS": "Manage Pending Warrants",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Citizens",
     "IMPORT_VEHICLES": "Import Vehicles",
