--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -153,6 +153,7 @@
     "updateAvailableInfo": "A new update is available. Please update your SnailyCAD to take advantage of the latest features and bug fixes. Click for more information.",
     "serialNumberInUse": "Serial Number is already in use.",
     "vinNumberInUse": "VIN Number is already in use.",
-    "alreadyHasPrimaryUnit": "This call already has a primary unit."
+    "alreadyHasPrimaryUnit": "This call already has a primary unit.",
+    "noActiveOfficer": "You don't have any active officer at this moment, please get back on-duty first."
   }
 }
