:globe_with_meridians: FRA Translation Revision

--- a/apps/client/locales/fr-FR/admin.json
+++ b/apps/client/locales/fr-FR/admin.json
@@ -12,6 +12,7 @@
     "MANAGE_CUSTOM_FIELDS": "Gérer les champs personnalisés",
     "MANAGE_CUSTOM_ROLES": "Gérer les rôles personnalisés",
     "MANAGE_COURTHOUSE": "Gérer le tribunal",
+    "MANAGE_PENDING_WARRANTS": "Gérer les mandats en attente",
     "import": "Importer",
     "IMPORT_CITIZENS": "Importer Citoyens",
     "IMPORT_VEHICLES": "Importer Véhicules",
