💬 Update 'ru' locale

--- a/apps/client/locales/ru/admin.json
+++ b/apps/client/locales/ru/admin.json
@@ -12,6 +12,7 @@
     "MANAGE_CUSTOM_FIELDS": "Пользовательские поля",
     "MANAGE_CUSTOM_ROLES": "Пользовательские роли",
     "MANAGE_COURTHOUSE": "Суды",
+    "MANAGE_PENDING_WARRANTS": "Управлене ожидающими ордерами",
     "import": "Импорт",
     "IMPORT_CITIZENS": "Импорт граждан",
     "IMPORT_VEHICLES": "Импорт транспорта",
