--- a/apps/client/locales/ru/common.json
+++ b/apps/client/locales/ru/common.json
@@ -153,6 +153,7 @@
     "updateAvailableInfo": "Доступно обновление. Обновите ваш SnailyCAD, чтобы получить свежие функции и обновления. Кликните для информации.",
     "serialNumberInUse": "Серийный номер уже используется",
     "vinNumberInUse": "VIN номер уже используется",
-    "alreadyHasPrimaryUnit": "У вызова уже есть основной юнит"
+    "alreadyHasPrimaryUnit": "У вызова уже есть основной юнит",
+    "noActiveOfficer": "Нет ни одного активного офицера в данный момент, сначала выйдите на смену"
   }
 }
