--- a/apps/client/locales/ru/courthouse.json
+++ b/apps/client/locales/ru/courthouse.json
@@ -31,6 +31,7 @@
     "deleteCourthousePost": "Удалить публикацию",
     "addCourthousePost": "Добавить публикацию",
     "noCourthousePosts": "Публикаций нет",
+    "createdBy": "Создано",
     "alert_deleteCourthousePost": "Вы уверены, что хотите удалить эту публикацию? Это действие необратимо",
     "alert_deleteCourtEntry": "Вы уверены, что хотите удалить это судебное заседание? Это действие необратимо",
     "alert_deleteCourtDate": "Вы уверены, что хотите удалить эту дату суда? Это действие необратимо"
