--- a/apps/client/locales/ru/leo.json
+++ b/apps/client/locales/ru/leo.json
@@ -237,6 +237,7 @@
     "hideCalls": "Скрыть вызовы",
     "showUnitsOnly": "Показать только юниты",
     "showAllPlayers": "Показать всех игроков",
+    "warrantCreatedButApprovalRequired": "Ордер успешно создан, однако, CAD требует подтверждения ордера для активации. Ордер будет доступен после подтверждения",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
     "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо",
