:tada: feat: able to create license exams & more

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -83,10 +83,9 @@
     "callHistory": "Call History",
     "citizenLogs": "Citizen Logs",
     "courthouse": "Courthouse",
-    "dlExams": "Driver License Exams",
+    "licenseExams": "License Exams",
     "dmv": "Department of Motor Vehicles",
     "penalCodes": "Penal Codes",
-    "weaponExams": "Weapon Exams",
     "myDeputyLogs": "My deputy logs",
     "whatsNew": "What's New"
   },
