:hammer: chore: implement more inputs from UI1

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -53,7 +53,8 @@
     "right": "Right",
     "user": "User",
     "savedSettingsSuccess": "Settings successfully saved.",
-    "select": "Select..."
+    "select": "Select...",
+    "item": "Item"
   },
   "Nav": {
     "citizen": "Citizen",
