💬 Update 'ru' locale

--- a/apps/client/locales/ru/citizen.json
+++ b/apps/client/locales/ru/citizen.json
@@ -42,6 +42,7 @@
     "manageOccupation": "Редактировать род занятий",
     "manageLicenses": "Управление лицензиями",
     "licenses": "Лицензии",
+    "licenseSuspendedInfo": "Лицензия приостановлена. Обратитесь к офицеру полиции для отмены приостановления",
     "alert_deleteCitizen": "Вы уверены, что хотите удалить <span>{citizen}</span>? Это действие необратимо."
   },
   "Vehicles": {
