--- a/apps/client/locales/ru/common.json
+++ b/apps/client/locales/ru/common.json
@@ -52,7 +52,9 @@
     "left": "Слева",
     "right": "Справа",
     "user": "Пользователь",
-    "savedSettingsSuccess": "Настройки успешно сохранены"
+    "savedSettingsSuccess": "Настройки успешно сохранены",
+    "select": "Выбрать...",
+    "item": "Элемент"
   },
   "Nav": {
     "citizen": "Гражданин",
@@ -154,6 +156,8 @@
     "serialNumberInUse": "Серийный номер уже используется",
     "vinNumberInUse": "VIN номер уже используется",
     "alreadyHasPrimaryUnit": "У вызова уже есть основной юнит",
-    "noActiveOfficer": "Нет ни одного активного офицера в данный момент, сначала выйдите на смену"
+    "noActiveOfficer": "Нет ни одного активного офицера в данный момент, сначала выйдите на смену",
+    "socialSecurityNumberTaken": "Этот номер социального страхования уже используется",
+    "citizenNotAllowedToEditLicenses": "Граждане не могут редактировать свои лицензии. Обратитесь к офицеру полиции, чтобы изменить лицензии"
   }
 }
