--- a/apps/client/locales/ru/leo.json
+++ b/apps/client/locales/ru/leo.json
@@ -157,14 +157,6 @@
     "officers": "Офицеры",
     "callsign1": "Позывной. Символ 1",
     "callsign2": "Позывной. Символ 2",
-    "DLExams": "Экзамен на водительскую лицензию",
-    "noDLExams": "Экзаменов на водительские права пока нет.",
-    "editDLExam": "Изменить экзамен на водительские права",
-    "theoryExam": "Теоритический экзамен",
-    "practiceExam": "Практический экзамен",
-    "createDLExam": "Создать экзамен на получение водительских прав",
-    "categories": "Категории",
-    "deleteDLExam": "Удалить экзамен на водительские права",
     "license": "Лицензии",
     "otherFields": "Прочие поля",
     "manageCustomFields": "Усправлять прочими полями",
@@ -224,11 +216,6 @@
     "sendTone": "Отправить сигнал",
     "toneSuccess": "Сигналы выбранным департаментам успешно отправлены",
     "toneNotification": "Уведомление сигнала",
-    "weaponExams": "Экзамены на оружейную лицензию",
-    "noWeaponExams": "Нет экзаменов на оружейную лицензию",
-    "editWeaponExam": "Редактировать экзамены на оружейную лицензию",
-    "createWeaponExam": "Создать экзамен на оружейную лицензию",
-    "deleteWeaponExam": "Удалить экзамен на оружейную лицензию",
     "activeWarrants": "Активные ордеры",
     "noActiveWarrants": "Нет активных ордеров",
     "paymentStatus": "Статус оплаты",
@@ -237,11 +224,13 @@
     "hideCalls": "Скрыть вызовы",
     "showUnitsOnly": "Показать только юниты",
     "showAllPlayers": "Показать всех игроков",
+    "totalCost": "Общая стоимость",
+    "warningApplicable": "Предупреждение применимо",
+    "impounded": "Эвакуировано",
+    "impoundVehicle": "Эвакуировать транспорт",
     "warrantCreatedButApprovalRequired": "Ордер успешно создан, однако, CAD требует подтверждения ордера для активации. Ордер будет доступен после подтверждения",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
-    "alert_deleteDLExam": "Вы уверены, что хотите удалить этот экзамен на получение водительских прав? Это действие необратимо",
-    "alert_deleteWeaponExam": "Вы уверены, что хотите удалить этот экзамен на оружейную лицензию? Это действие необратимо",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
     "alert_endIncident": "Вы уверены, что хотите завершить этот инцидент. Его все еще могут просматривать офицеры.",
     "alert_deleteRecord": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
@@ -264,5 +253,16 @@
     "stolen": "украден(о)",
     "filters": "Фильтры",
     "alert_deleteBolo": "Вы уверены, что хотите удалить эту запись BOLO? Это действие необратимо"
+},
+  "licenseExams": {
+    "exams": "Экзамены на лицензию",
+    "noExams": "Нет экзаменов на получение лицензий",
+    "editExam": "Изменить экзамен на лицензию",
+    "theoryExam": "Теоритический экзамен",
+    "practiceExam": "Практический экзамен",
+    "createExam": "Создать экзамен",
+    "categories": "Категории",
+    "deleteExam": "Удалить экзамен",
+    "alert_deleteExam": "Вы уверены, что хотите удалить экзамен на получение лицензии? Это действие необратимо."
   }
 }
